This is the second commit

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
         <title>Welcome to my website</title>
     </head>
     <body> 
-        <h1>¡Bienvenido a aprender mas sobre programación web!</h1>
-        <img src="https://66.media.tumblr.com/66adbf352fb4151c171c5f2e2e2e319b/tumblr_pg3uf1lUY51rey868o1_500.gif" alt="">
-        <img src="https://media.tenor.com/ucA1X6K2KncAAAAS/the-matrix-matrix.gif" alt="">
+        <header>
+            <h1>¡Bienvenido a aprender mas sobre programación web!</h1>
+        </header>
+        <section>
+            <img src="https://66.media.tumblr.com/66adbf352fb4151c171c5f2e2e2e319b/tumblr_pg3uf1lUY51rey868o1_500.gif" alt="">
+            <img src="https://media.tenor.com/ucA1X6K2KncAAAAS/the-matrix-matrix.gif" alt="">
+        </section>
         <footer>
             <p>es el mejor sitio web del mundo 2023</p>
         </footer>
